--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 
 [theme]
-base = "light"
-
-[server]
-headless = true
-port = 8501
-enableCORS = false
+base="dark"
+primaryColor="#4DB6AC"
+backgroundColor="#0E1117"
+secondaryBackgroundColor="#262730"
+textColor="#FAFAFA"
+font="sans serif"
